Fixing overflow for codeblocks

--- a/source/stylesheets/_highlighting.scss
+++ b/source/stylesheets/_highlighting.scss
@@ -15,6 +15,10 @@ code {
       border: none;
    }
 
+  .shell {
+    overflow-x: visible;
+  }
+
    code {
     background-color: #eee8d5;
     padding: 0;
